# tubeulator

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CONDA_SETUP.md  LICENSE.txt  README.md  codecov.yml  mkdocs.yml  proposal.md  pyproject.toml  requirements.txt  setup.py  tox.ini  tutorial.ipynb
.github/workflows/: run_unit_tests.sh  run_unit_tests.yml  test.yml  test_tubes.py
data/tfl_openapi_v1/: unified_api.json
data/tfl_openapi_v1/schemas/: _definitions.json  additionalproperties.json  apiversioninfo.json  carparkoccupancy.json  casualty.json  coordinate.json  crowding.json  daterange.json  disruptedpoint.json  disruptedroute.json  fare.json  faresperiod.json  geopoint.json  identifier.json  instructionstep.json  jpelevation.json  knownjourney.json  leg.json  line.json  lineservicetype.json  linespecificservicetype.json  linestatus.json  matchedroute.json  matchedroutesections.json  matchedstop.json  networkstatus.json  obstacle.json  passengerflow.json  passengertype.json  path.json  placepolygon.json  plannedwork.json  point.json  prediction.json  recommendation.json  recommendationresponse.json  redirect.json  roaddisruption.json  roaddisruptionline.json  roaddisruptionschedule.json  (+16 more)
data/tfl_openapi_v3/: AccidentStats.json  AirQuality.json  Journey.json  README.md  StopPoint.json  crowding.json  error_inventory.md
data/tfl_openapi_v3/AccidentStats/schemas/: accidentdetail.json  all.json  casualty.json
data/tfl_openapi_v3/BikePoint/: BikePoint.json
data/tfl_openapi_v3/Disruptions-Lifts-v2/schemas/: get200applicationjsonresponse.json  liftdisruption.json
data/tfl_openapi_v3/Journey/schemas/: tfl-13.json  tfl-18.json  tfl-21.json  tfl-25.json  tfl-28.json  tfl-3.json  tfl-34.json  tfl-4.json  tfl-40.json  tfl-6.json  tfl-9.json
data/tfl_openapi_v3/Line/schemas/: all.json  ids-arrivals-stoppointid-get200textxmlresponse.json  ids-disruptionget200textjsonresponse.json  ids-get200textxmlresponse.json  tfl-13.json  tfl-18.json  tfl-2.json  tfl-20.json  tfl-24.json  tfl-28.json  tfl-32.json  tfl-35.json  tfl-41.json  tfl-6.json
data/tfl_openapi_v3/Place/: Place.json
data/tfl_openapi_v3/Place/schemas/: all.json  tfl-3.json  tfl-9.json
data/tfl_openapi_v3/Road/schemas/: ids-disruptionget200textjsonresponse.json  system-2.json  tfl-3.json  tfl-4.json  tfl-5.json
data/tfl_openapi_v3/Search/schemas/: tfl-2.json
data/tfl_openapi_v3/StopPoint/schemas/: all.json  id-routeget200applicationjsonresponse.json  tfl-10.json  tfl-11.json  tfl-13.json  tfl-21.json  tfl-7.json  type-types-get200applicationxmlresponse.json
data/tfl_openapi_v3/occupancy/schemas/: bikepoints-ids-get200applicationjsonresponse.json  tfl-4.json  tfl.json
data/tfl_openapi_v3/unified/ReleasedUnifiedAPIProd/: ReleasedUnifiedAPIProd.json
data/tfl_openapi_v3/unified/ReleasedUnifiedAPIProd/schemas/: accidentstatsorderedsummary.json  crowding.json  daterange.json  disambiguation.json  disruption.json  faredetails.json  faresmode.json  faresperiod.json  faressection.json  faretap.json  geocodesearchmatch.json  geopoint.json  instructionstep.json  itineraryresult.json  journey.json  journeyfare.json  line.json  lineservicetype.json  linespecificservicetype.json  linestatus.json  message.json  obstacle.json  passengerflow.json  passengertype.json  period.json  placecategory.json  placegeo.json  postcodeinput.json  predictiontiming.json  recommendation.json  recommendationresponse.json  roaddisruptionimpactarea.json  routeoption.json  routesearchmatch.json  routesearchresponse.json  schedule.json  searchresponse.json  stationinterval.json  stoppoint.json  stoppointsresponse.json  (+8 more)
docs/: code_generation.md  index.md  motivation.md
docs/api/: accident.md  air.md  bike.md  crowding.md  disruption_lifts.md  endpoint_apis.md  endpoint_routes.md  index.md  journey.md  line.md  mode.md  occupancy.md  place.md  road.md  search.md  stop.md  types.md  vehicle.md
docs/stylesheets/: extra.css
docs/usage/: index.md
docs/vercel/: build.sh  deploy.sh
src/tubeulator/: __init__.py  cli.py  codegen.py  exc.py  journey.py  log_utils.py  path_utils.py
src/tubeulator/api/: __init__.py  interface.py  line.py  line_deprecated.py  mode_deprecated.py  request.py
src/tubeulator/api/endpoint/: __init__.py  access.py  accident.py  air.py  bike.py  disruption.py  line.py  names.py  occupancy.py  search.py
src/tubeulator/api/endpoint/routes/: __init__.py  accident.py  air.py  bike.py  crowding.py  disruption_lifts.py  journey.py  line.py  mode.py  occupancy.py  place.py  road.py  search.py  stop.py  types.py  vehicle.py
src/tubeulator/codegen/: codegen.py  load_test.py  populate.py
src/tubeulator/data/gtfs/stationdata/: levels.csv
src/tubeulator/data/openapi/: README.md  error_inventory.md  namespace.json  naming.md
src/tubeulator/data/openapi/Line/: Line.json
src/tubeulator/data/tfl_openapi_v3/: naming.md
src/tubeulator/db/: check_mongod.py  mongod.py  store_creds.py
src/tubeulator/network/: __init__.py  combine.py  data_model.py  load.py  load_gtfs.py
src/tubeulator/openapi/: _types.py  dataclass_generator.py  fetch.py  reference.py  scan.py
src/tubeulator/openapi/schema/: aliased.py  base.py  unified.py
src/tubeulator/topology/: __init__.py  combine.py  data_model.py  gtfs_data_model.py  load.py  load_gtfs.py  map.py
src/tubeulator/utils/: lcp_trie.py  logs.py  paths.py  schemas.py  string_conv.py
tests/: api_test.py  core_test.py  dto_test.py  fetch_test.py  interface_test.py  load_test.py  topo_combine_test.py  topo_load_test.py
tests/apis/: accident_stats_data.py  accident_stats_test.py  air_quality_data.py  air_quality_test.py  bike_point_data.py  bike_point_test.py  crowding_data.py  crowding_test.py  disruptions_lifts_v2_data.py  disruptions_lifts_v2_test.py  journey_data.py  journey_test.py  line_data.py  line_test.py  mode_data.py  mode_test.py  occupancy_data.py  occupancy_test.py  place_data.py  place_test.py  road_data.py  road_test.py  search_data.py  search_test.py  stop_point_data.py  stop_point_test.py  vehicle_data.py  vehicle_test.py
(+198 files in other folders)
