[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
    {email = "louismmx@gmail.com", name = "Louis Maddox"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "dataclass_wizard @ git+https://github.com/rnag/dataclass-wizard.git@WIP-support-cyclic-references",
    "defopt",
    "httpx",
    "jsonschema",
    "pydantic>=2.6.4",
    "pymongo",
    "ujson",
    "urllib3<2",
]
description = "TfL open data interface library."
dynamic = ["version"]
name = "tubeulator"
readme = "README.md"
requires-python = ">=3.10,<=3.12"

[project.license]
text = "MIT"

[project.scripts]
tubeulator = "tubeulator.cli:main"

[project.urls]
Documentation = "https://tubeulator.vercel.app/"
Homepage = "https://github.com/lmmx/tubeulator"
Repository = "https://github.com/lmmx/tubeulator.git"

[tool.pdm]
distribution = true
version = {path = "src/tubeulator/__init__.py", source = "file"}

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material[recommended,imaging]>=9.5.2",
    "mkdocs-section-index>=0.3.8",
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.0",
]
test = [
    "pytest>=7.4.0",
]
vercel = [
    "urllib3<2",
]

[tool.ruff.lint]
ignore = [
    "C408",
    "C901",
    "E501",
    "E741",
]
ignore-init-module-imports = true
select = [
    "C",
    # "D",
    "E",
    "F",
    "I",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E401",
]
"src/tubeulator/codegen/load_test.py" = [
    "F401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
