[build-system]
build-backend = "pdm.backend"
requires = [
    "pdm-backend",
]

[project]
authors = [
    { email = "louismmx@gmail.com", name = "Louis Maddox" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "defopt",
    "httpx",
    "jsonschema",
    "orjson",
    "pydantic>=2.6.4",
    "pymongo",
    "urllib3<2",
]
description = "TfL open data interface library."
name = "tubeulator"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.1.0"

[project.license]
text = "MIT"

[project.optional-dependencies]
folium = [
    "folium>=0.16.0",
]
polars = [
    "patito>=0.6.1",
    "polars>=0.20.17",
]
polars-lts-cpu = [
    "patito>=0.6.1",
    "polars-lts-cpu>=0.20.17",
]

[project.scripts]
tubeulator = "tubeulator.cli:main"

[project.urls]
Homepage = "https://github.com/lmmx/tubeulator"
Repository = "https://github.com/lmmx/tubeulator.git"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material[recommended,imaging]>=9.5.2",
    "mkdocs-section-index>=0.3.8",
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.0",
]
test = [
    "inline-snapshot>=0.9.0",
    "pytest-custom-exit-code>=0.3.0",
    "pytest-xdist>=3.6.1",
    "pytest>=7.4.0",
]
vercel = [
    "urllib3<2",
]

[tool.pdm.resolution]
excludes = [
    "polars",
    "polars-lts-cpu",
]

[tool.ruff.lint]
ignore = [
    "C408",
    "C901",
    "E501",
    "E741",
]
ignore-init-module-imports = true
select = [
    "C",
    "E",
    "F",
    "I",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E401",
]
"src/tubeulator/codegen/load_test.py" = [
    "F401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
